Revision history for Perl extension SQL::Executor
0.14    2012/12/28
        - new method: insert_on_duplicate (for MySQL and needs SQL::Maker >= 1.09)

0.13    2012/12/10
        - improve error message when SQL execution is failed.

0.12    2012/10/16
        - new method: last_insert_id implemented. (for MySQL/SQLite user).
        - running test code is faster by using in-memory database.

0.11    2012/06/29
        - select_id for each select statement is not generated by default.
          (to remove dependency to Data::UUID)

        - behavior for select_*named() is changed.
          In previous release, select_named(), select_row_named(), select_all_named() doesn't accept
          empty bind by default. this behavior is changed, empty bind is not checked by default. 
          If you want check empty bind like previous release, set check_empty_bind=1 in constructor.
          please see new() and named_bind() in POD.

0.10    2012/06/24
        - first version in CPAN. 
          Nothing is changed from version 0.03 except version and license in Makefile.PL.

0.03    2012/06/17
        - fix: insuffcient select_id is generated in iterator
        - generator for select_id is created when id is used.

0.02    2012/06/13
        - add execute_query_named method

0.01    2012/05/04
        - original version