@@ -53,6 +53,21 @@ These callbacks are useful for making row object.
 
 
 
+## connect($dsn, $user, $pass, $option\_for\_dbi, $option\_href)
+
+$dsn: DSN
+$user: database user
+$pass: database password
+$option\_href\_for\_dbi: options passed to DBI
+$option\_href: option for SQL::Executor (options are same as new() method)
+
+connect database and create SQL::Executor instance. using this method, SQL::Executor uses
+managed connection and transaction via [DBIx::Handler](http://search.cpan.org/perldoc?DBIx::Handler)
+
+## dbh()
+
+return database handler
+
 ## select($table\_name, $where, $option)
 
 select row(s). parameter is the same as select method in [SQL::Maker](http://search.cpan.org/perldoc?SQL::Maker). But array ref for filed names are not needed.
@@ -245,7 +260,19 @@ If you want to generate id, please override
 
 # How to use Transaction.
 
-You can use [DBI](http://search.cpan.org/perldoc?DBI)'s transaction (begin\_work and commit).
+When create instance using connect() method, you can use [DBIx::Handler](http://search.cpan.org/perldoc?DBIx::Handler)'s
+transaction management, 
+
+    use SQL::Executor;
+    my $ex = SQL::Executor->connect($dsn, $id, $pass);
+    my $txn = $ex->handler->txn_scope();
+    $ex->insert('SOME_TABLE', { id => 124, value => 'xxxx'} );
+    $ex->insert('SOME_TABLE', { id => 125, value => 'yyy'} );
+    $txn->commit();
+
+
+
+Or You can use [DBI](http://search.cpan.org/perldoc?DBI)'s transaction (begin\_work and commit).
 
     use DBI;
     use SQL::Executor;
@@ -277,7 +304,6 @@ Or you can also use transaction management modules like [DBIx::TransactionManage
 
 - I want to use [SQL::Maker](http://search.cpan.org/perldoc?SQL::Maker).
 - When I need to use complex query, I want to use named placeholder.
-- I don't want to manage transaction in this module.
 
 # AUTHOR
 
